<resources>

    <!-- Common -->
    <string name="app_name">Yummy</string>
    <string name="common_error">Ocurrió un error\n😢</string>

    <!-- Home -->
    <string name="title_recipes">Recetas</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_profile">Perfil</string>

    <!-- Recipes -->
    <string name="recipes_header">Las mejores recetas\npara <b>#YapeLovers</b></string>
    <string name="recipes_search_recipe">Encuentra tu receta</string>
    <string name="recipes_category_all">Todo</string>
    <string name="recipes_category_beef">Carne</string>
    <string name="recipes_category_chicken">Pollo</string>
    <string name="recipes_category_dessert">Postre</string>
    <string name="recipes_category_pasta">Pastas</string>
    <string name="recipes_category_seafood">Marino</string>
    <string name="recipes_category_vegetarian">Vegetariano</string>
    <string name="recipes_recipe_short_information">%d ingredientes | %s</string>
    <string name="recipes_recipe_content_description">Imagen de la receta</string>
    <string name="recipes_result_found">No se encontraron recetas</string>

    <!-- Recipes - Search -->
    <string name="search_title">Buscar</string>
    <string name="search_no_recipes">No se encontraron recetas\n👀</string>

    <!-- Recipes - Detail -->
    <string name="detail_title">Detalle</string>
    <string name="detail_preparation">Preparación</string>
    <string name="detail_ingredients">Ingredientes (%d)</string>

    <!-- Recipes - Detail - Map -->
    <string name="map_title">Mapa</string>

    <!-- Favorites -->
    <string name="favorites_title">Favoritos</string>

    <!-- Profile -->
    <string name="profile_title">Perfil</string>
</resources>
