<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/yummy_navigation"
    app:startDestination="@+id/navigation_recipes">

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.frantun.yummy.presentation.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes">

        <action
            android:id="@+id/action_to_detail"
            app:destination="@+id/navigation_detail" />

        <action
            android:id="@+id/action_to_search"
            app:destination="@+id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.frantun.yummy.presentation.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" >

        <action
            android:id="@+id/action_to_detail"
            app:destination="@+id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.frantun.yummy.presentation.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.frantun.yummy.presentation.ui.search.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search" >

        <action
            android:id="@+id/action_to_detail"
            app:destination="@+id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.frantun.yummy.presentation.ui.detail.DetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="recipe"
            app:argType="com.frantun.yummy.domain.model.RecipeModelUi"
            app:nullable="false" />

        <action
            android:id="@+id/action_to_map"
            app:destination="@+id/navigation_map" />
    </fragment>

    <dialog
        android:id="@+id/navigation_map"
        android:name="com.frantun.yummy.presentation.ui.map.MapBottomSheet"
        android:label="@string/map_title"
        tools:layout="@layout/bottom_sheet_map">
        <argument
            android:name="origin"
            app:argType="com.frantun.yummy.domain.model.OriginModelUi"
            app:nullable="false" />
    </dialog>
</navigation>
